# opencv-slider-captcha-solver

./: .gitignore  CMakeLists.txt  README.md  captcha.cpp  captcha.h  vcpkg.json
